# aiden-brand-audit

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_SETUP.md  PRE_DEPLOYMENT_VALIDATION_REPORT.md  PRODUCTION-RELEASE-REPORT.md  README.md  app.py  comprehensive_brand_audit_test.py  config.py  docker-compose.production.yml  final-picky-user-test.js  final_comprehensive_validation.py  full_brand_audit_test.py  main.py  middleware.ts  next.config.ts  package-lock.json  package.json  picky-user-test.js  playwright.config.js  production-health-check.py  professional_brand_report_generator.py  quick-ui-test.js  real_brand_analysis_20250714_165715.json  real_brand_audit_test.py  requirements.txt  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  test-critical-flow.js  test-full-report-delivery.js  ui_brand_audit_test.py
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.claude-productivity-suite/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.codebase-os/reports/: cleanup-report-2025-07-26.md  health-report-2025-07-25.md  health-report-2025-07-26.md  metrics-dashboard.json  refactoring-opportunities.md  technical-debt.md
.github/workflows/: code-quality.yml  deploy.yml  performance-monitoring.yml  test.yml
.playwright-mcp/: page-2026-04-17T15-36-22-823Z.yml  page-2026-04-17T15-44-18-576Z.yml  page-2026-04-17T15-44-27-777Z.yml  page-2026-04-17T15-44-40-285Z.yml  page-2026-04-17T15-45-01-042Z.yml
__tests__/: landmarks-and-copy.test.ts  pricing-copy.test.ts
analyzers/: color_analyzer.py  strategic_analyzer.py
backend/: .dockerignore  Dockerfile.production  entrypoint.sh  optimized_llm_analysis.py  pyproject.toml  pytest.ini  quick_start.py  replace_llm_analysis.py  service_validation_report_20250713_135821.json  service_validation_report_20250713_143150.json  start_enhanced_app.py  test_enhanced_system.py
backend/migrations/: env.py
backend/reports/: apple_brand_audit_report.md  tesla_brand_audit_report.md  testbrand_brand_audit_report.md
backend/src/: config.py  main.py
backend/src/routes/: analytics.py  brand_audit.py
backend/src/services/: content_quality_service.py  database_optimization_service.py
backend/src/services/extracted/: brand_analyzer.py  llm_analysis_service.py  scoring_service.py
collectors/: ads_collector.py  logo_collector.py  screenshot_collector.py
frontend/: .env.example  .prettierignore  .prettierrc.js  Dockerfile.production  PHASE_1_TESTING_VALIDATION_REPORT.md  index.html  lighthouse.config.js  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.js
load-tests/: README.md  audit.k6.js
report/: components.py  visual_report.py
scripts/: clean_and_reinstall.sh
src/: middleware.ts
supabase/: config.toml
(+168 files in other folders)
